force-app/main/default/objects/DocusignApiKeys__c/DocusignApiKeys__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DocusignApiKeys</label>
</CustomObject>