force-app/main/default/objects/DocusignApiKeys__c/fields/AccessToken2__c.field-meta.xml
<CustomField>
    <fullName>AccessToken2__c</fullName>
    <label>AccessToken2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>