force-app/main/default/objects/DocusignApiKeys__c/fields/AccessToken3__c.field-meta.xml
<CustomField>
    <fullName>AccessToken3__c</fullName>
    <label>AccessToken3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>