force-app/main/default/objects/DocusignApiKeys__c/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <label>API URL</label>
    <type>Url</type>
</CustomField>