force-app/main/default/objects/DocusignApiKeys__c/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <label>Auth URL</label>
    <type>Url</type>
</CustomField>