force-app/main/default/objects/DocusignApiKeys__c/fields/IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntegrationKey__c</fullName>
    <label>IntegrationKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>