force-app/main/default/objects/DocusignApiKeys__c/fields/RefreshToken2__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken2__c</fullName>
    <label>RefreshToken2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>