force-app/main/default/objects/DocusignApiKeys__c/fields/RefreshToken3__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken3__c</fullName>
    <label>RefreshToken3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>